--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="title-container">
                     <h3>Hello there! <br> <span class="main-span">I'm <span class="sub-span">Victor Reverter</span></span></h3>
                 </div>
-                <p class="sub-paragraph">Senior Graphic, UX & UI Designer and Frontend Dev based in Mad, Spain.</p>
+                <p class="sub-paragraph">Senior Graphic, UX & UI Designer and Frontend Dev based in Madrid, Spain.</p>
                 <p class="sub-paragraph">Making creation my natural habitat.</p>
     
                 <div class="container-btn">
