Update Animation - 1st

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <div class="panel-veil left-panel"></div>
             <div class="panel-veil right-panel"></div>
         </div>
+
+        <div id="veilClose" class="veil-close">
+            <!-- <h1 id="text-veil-content">Title Example</h1> -->
+            <h1 id="text-veil-content"></h1>
+        </div>
     
         <div class="head-container">
             <a href="index.html" class="logo-home">
