Update Animation in the Triad - Veil Animation

--- a/about.html
+++ b/about.html
@@ -15,6 +15,10 @@
 </head>
 <body>
     <div class="wrap">
+
+        <div id="veilStandard" class="veil-standard">
+            <h1>About</h1>
+        </div>
     
         <div class="head-container">
             <a href="index.html" class="logo-home">
@@ -131,6 +135,7 @@
 <!-- Personal JS -->
 <script src="js/header.js"></script>
 <script src="js/script.js"></script>
+<script src="js/veil-animation.js"></script>
 <script>
     const ABOUT_D_LINK = document.querySelector('#about-d-link');
     const ABOUT_M_LINK = document.querySelector('#about-m-link');
