Update Animation in About & Contact

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
             </div>
 
             <div class="specs-container">
-                <h2 class="specs-title">Specialties & Services</h2>
+                <h2 class="specs-title">Fields of Work</h2>
                 <div class="specs-block">
                     <div class="specs-item">Creative Design</div>
                     <div class="specs-item">Front Dev</div>
