--- a/works/recap-2019/recap-2019.html
+++ b/works/recap-2019/recap-2019.html
@@ -90,13 +90,13 @@
             
             <div class="project-selector"></div>
 
-            <a href="../potusdata/potusdata.html" class="project-next">
+            <a href="../datamovie/datamovie.html" class="project-next">
                 <div class="texts-next-contain">
                     <h5 class="title-block">Next project</h5>
-                    <h2 class="title-project">"POTUS Data"</h2>
-                    <h3 class="project-description">A project to show data related with the Potus through the history.</h3>
+                    <h2 class="title-project">"Data Movie App"</h2>
+                    <h3 class="project-description">A movies, shows & people data showcase.</h3>
                 </div>
-                <div id="potusdata" class="project-picture"></div>
+                <div id="datamovie" class="project-picture"></div>
             </a>
         </div>
 
